--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--CDN AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <!--TOASTIFY-JS CDN-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--CDN BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,10 +45,37 @@
 
                 </div>
             </nav>
-            <div id="lista_productos">
 
-            </div>
         </header>
+        <section class="filtro">
+            <h4> Filtro de Comidas</h4>
+            <div class="form-check">
+                <input id="btn_ravioles" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                    Ravioles                
+                </label>
+            </div>
+            <div class="form-check">
+                <input id="btn_tallarines" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                    Tallarines
+                </label>
+            </div>
+            <div class="form-check">
+                <input id="btn_agnoloti" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                    Agnolotis
+                </label>
+            </div>
+            <div class="form-check">
+                <input id="btn_todos" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                <label class="form-check-label" for="flexRadioDefault3">
+                    Todos los Platos
+                </label>
+            </div>
+        </section>
+        <div id="lista_productos"> </div>
+
 
     </main>
     <!-- Modal lista comida -->
@@ -64,13 +94,19 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir Comprando</button>
-                    <button type="button" class="btn btn-primary">Finalizar Compra</button>
+                    <button id="btn_vaciar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vaciar Compra</button>
+                    <button id="btn_finalizar" type="button" class="btn btn-primary">Finalizar Compra</button>
                 </div>
             </div>
         </div>
     </div>
     <footer></footer>
+    <!--SWEET ALERT-JS CDN-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js " integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin=" anonymous" referrerpolicy="no-referrer "></script>">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!--TOASTIFY-JS CDN-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/app.js"></script>
 
 </body>
