--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
         <section class="filtro">
             <h4> Filtro de Comidas</h4>
             <div class="form-check">
-                <input id="btn_ravioles" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <input id="btn_ravioles" class="form-check-input" type="radio" name="flexRadioDefault">
                 <label class="form-check-label" for="flexRadioDefault1">
                     Ravioles                
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_tallarines" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <input id="btn_tallarines" class="form-check-input" type="radio" name="flexRadioDefault"  checked>
                 <label class="form-check-label" for="flexRadioDefault2">
                     Tallarines
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_agnoloti" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                <input id="btn_agnoloti" class="form-check-input" type="radio" name="flexRadioDefault"  checked>
                 <label class="form-check-label" for="flexRadioDefault2">
                     Agnolotis
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_todos" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                <input id="btn_todos" class="form-check-input" type="radio" name="flexRadioDefault"checked>
                 <label class="form-check-label" for="flexRadioDefault3">
                     Todos los Platos
                 </label>
