--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--TOASTIFY-JS CDN-->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--CDN BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>Mia Pasta</title>
@@ -50,26 +50,26 @@
         <section class="filtro">
             <h4> Filtro de Comidas</h4>
             <div class="form-check">
-                <input id="btn_ravioles" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
                     Ravioles                
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_tallarines" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <input  class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                 <label class="form-check-label" for="flexRadioDefault2">
                     Tallarines
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_agnoloti" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
-                <label class="form-check-label" for="flexRadioDefault2">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" checked>
+                <label class="form-check-label" for="flexRadioDefault3">
                     Agnolotis
                 </label>
             </div>
             <div class="form-check">
-                <input id="btn_todos" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
-                <label class="form-check-label" for="flexRadioDefault3">
+                <input  class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" checked>
+                <label class="form-check-label" for="flexRadioDefault4">
                     Todos los Platos
                 </label>
             </div>
@@ -104,7 +104,6 @@
     <!--SWEET ALERT-JS CDN-->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js " integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin=" anonymous" referrerpolicy="no-referrer "></script>">
-    <!--CDN BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!--TOASTIFY-JS CDN-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
